--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <div class="container">
         <header>
-            <h1>My Name</h1>
+            <h1>Amogh Samaga</h1>
         </header>
-        <img src=[IMAGE PATH HERE] alt="Profile Picture" class="profile-pic">
+        <img src=headshot.jpg alt="Profile Picture" class="profile-pic">
         <section>
             <h2>Contact Information</h2>
-            <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-            <p>Phone: <a href="tel:+1234567890">+1234567890</a></p>
+            <p>Email: <a href="mailto:amogh.samaga@gmail.com">amogh.samaga@gmail.com</a></p>
+            <p>Phone: <a href="tel:+19739801280">+1(973)-980-1280</a></p>
         </section>
         <section>
             <h2>About Me</h2>
